<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Superman</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <!-- 订单页 -->
	<string name="yuyue_order">预约订单</string>
	<string name="now_order">当前订单</string>
	<string name="history_order">历史订单</string>
	<string name="my_order_time_demo">下单时间：2016-08-09 16:14</string>
	<string name="no_register_msg">该手机号尚未注册成为我们的洗车超人，请先注册！</string>
	<string name="registed_msg">该手机号已经注册成为我们的洗车超人，您可以直接登录！</string>
	<string name="registed_success_msg">恭喜您注册成功！\n 接下来请填写上传个人信息。</string>
	<string name="org_http">&#160;&#160;官方网站：www.xichechaoren.cn</string>
	<string name="serve_tel">&#160;&#160;服务热线：400-666-8298</string>
	<string name="weixin_public">&#160;&#160;微信公众号：洗车超人</string>
	<string name="chick_pay_type">&#160;选择充值类型</string>
	<string name="paychick_user">&#160;输入车主注册电话号码</string>
	<string name="chicek_pay_method">选择支付方式</string>
	<string name="edit_pay_number">充值金额</string>
	<string name="paychick_usertishi">输入电话号码后请确认下方显示充值车主信息无误后才开始充值！</string>
	<string name="pay_type1">普通充值</string>
	<string name="pay_type2">购买会员</string>
	<string name="pay_type3">购买套餐</string>
	<string name="edit_time">设置可预约时间段</string>
	<string name="edit_time_tishi1">灰色为全天未设置可预约时间段</string>
	<string name="edit_time_datetishi">所选日期</string>
	<string name="demo_date">2016-12-01 星期一</string>
	<string name="complatid_title">投诉记录</string>
	<string name="complatid_title2">扣款记录</string>
	<string name="vip_type">会员类型：%s</string>
	<string name="user_info">用户信息</string>
	<string name="order_info">订单信息</string>
	<string name="order_state">订单状态</string>
	<string name="look_road">查 看 导 航 路 线</string>
	<string name="start_serve">开始服务</string>
	<string name="serve_type2">服务类型 | </string>
	<string name="serve_type_s">服务类型 | %s</string>
	<string name="serve_price">服务价格| </string>
	<string name="order_sn">订单编号 | </string>

</resources>
