<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_hui_main"
    android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:paddingBottom="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingTop="10dp"
        android:textSize="18sp"
        android:text="@string/chick_pay_type"
        android:textColor="@color/hui_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bulue_main"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/chongzi_yellow50"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/pay_type1"
            android:textColor="@color/yellow_main"
            android:textSize="13sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/vip_white50"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/pay_type2"
            android:textColor="@color/white"
            android:textSize="13sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableTop="@drawable/taocan_white50"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/pay_type3"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/customer_viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" />

</LinearLayout>