<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="150dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/logo_01" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="版本：1.01"
        android:textColor="@color/hui_main" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@drawable/corners_hui_line"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableLeft="@drawable/rog_http_yellow35"
            android:paddingTop="10dp"
            android:text="@string/org_http"
            android:textColor="@color/hui_main" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/hui_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:drawableLeft="@drawable/weixin_green35"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/weixin_public"
            android:textColor="@color/hui_main" />

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="@color/hui_line" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:drawableLeft="@drawable/serve_tel_yellow35"
            android:paddingTop="10dp"
            android:text="@string/serve_tel"
            android:textColor="@color/hui_main" />
    </LinearLayout>

</LinearLayout>